# mcpflux

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE_INTEGRATION.md  DELIVERY_SUMMARY.txt  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_INDEX.md  FILES_INDEX.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  PROJECT_CHECKLIST.md  PROJECT_COMPLETE.md  QUICK_REFERENCE.md  README.md  SETUP.md  generate_examples.py  main.py  pyproject.toml
.claude/: settings.local.json
docs/: architecture.md  claude-integration.md  delivery-summary.md  deployment-checklist.md  documentation-index.md  files-index.md  getting-started.md  implementation-summary.md  project-checklist.md  project-complete.md  quick-reference.md  setup.md
spreadsheet_mcp_agent/: README.md  __init__.py  config.py  error_recovery.py  events.py  example.py  facade.py  file_loader.py  handlers.py  llm_client.py  loaders.py  multi_step_planner.py  providers.py  query_decomposer.py  requirements.txt  schema_extractor.py  server.py  sql_executor.py  sql_generator.py
tests/: test_data_context.py  test_query_decomposition.py
